added GET method for showing all tickets for event
