# swagger.json
@@ -475,6 +475,49 @@
             }
         },
         "/tickets/event/{eventid}": {
+            "get": {
+                "tags": [
+                    "ticket-endpoint"
+                ],
+                "summary": "showTicketsForEvent",
+                "operationId": "showTicketsForEventUsingGET",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "eventid",
+                        "in": "path",
+                        "description": "eventid",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Ticket"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
             "delete": {
                 "tags": [
                     "ticket-endpoint"
